# vpn-deployment-system

./: .gitignore  AI_HANDOFF.md  AI_HANDOFF_CRITICAL.md  AI_HANDOFF_INSTRUCTIONS.md  AI_HANDOFF_QUICKSTART.md  AI_HANDOFF_REMOTE_ACCESS.md  AI_HANDOFF_STATUS.md  Add-Peer.ps1  BUSINESS_SCALING_PLAN.md  CLAUDE_HANDOFF_REPORT.md  CLAUDE_INSTRUCTIONS.txt  CLIENT-README.md  CLIENT_SETUP_GUIDE.md  CLI_BRANCH_README.md  CRITICAL_ISSUE_RESOLVED.md  DEPLOYMENT-CHECKLIST.md  DR_KOVER_FINAL_VALIDATION_PLAN.md  DR_KOVER_INSTRUCTIONS.md  DR_KOVER_VALIDATION_TEST.ps1  Dr-Kover-HIPAA-Certificate.md  Dr-Kover-Quick-Setup.md  EMAIL_TEMPLATE.txt  EMERGENCY_RECOVERY_PLAN.md  FINAL_DELIVERY_DR_KOVER.md  FINAL_DELIVERY_PACKAGE.md  GITHUB_STATUS.md  HANDOFF_EMAIL_DR_KOVER.md  HANDOFF_VALIDATION_COMPLETE.md  KENNY_REVIEW_MOMENTUM.md  LICENSE  NEVER_AGAIN_HARDWARE_NIGHTMARE.md  PRIVACY_SANITIZATION.md  PRODUCT_ROADMAP.md  PROJECT_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  README.md  REORGANIZATION_SUMMARY.md  ROADMAP_UPDATED.md  SCREENSHOT_INTELLIGENCE_README.md  SETUP-INSTRUCTIONS.md  (+47 more)
.github/: copilot-instructions.md
DR_KOVER_DELIVERY_PACKAGE/: DR_KOVER_HANDOFF_EMAIL.txt  DR_KOVER_PEER_ADDITION_GUIDE.txt  FINAL_SCRIPTS_FOR_VM.txt  SEND_THIS_EMAIL.txt
DR_KOVER_FINAL_DELIVERY/: DELIVERY_SUMMARY.txt  QUICK_TEST.md  SETUP_INSTRUCTIONS.md  VM_CLEANUP.ps1
DR_KOVER_FINAL_HANDOFF/: DR_KOVER_SYSTEM_SUMMARY.md  README.txt  VM_CLEANUP_CHECKLIST.txt
Dr_Kover_VPN_Delivery_Package/: README.md
Dr_Kover_VPN_Package_TXT/: README.txt  Setup-Instructions.txt
tools/configs/: pyproject.toml
(+121 files in other folders)
