[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-deployment-system"
version = "1.0.0"
description = "WireGuard VPN deployment system for dental software clients"
authors = [{name = "VPN Deployment Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "qrcode[pil]>=7.4.2",
    "cryptography>=41.0.8",
    "flask>=3.0.0",
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.6",
]

[project.scripts]
vpn-keygen = "src.cli.keygen:main"
vpn-client-config = "src.cli.client_config:main"
vpn-dashboard = "src.web.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
